--- a/notebook/exploration.ipynb
+++ b/notebook/exploration.ipynb
@@ -16,22 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-064583307a4e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mxgb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os \n",
     "import pandas as pd \n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -52,28 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-4a9f9b496d44>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_orig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data/Telco-Customer-Churn.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_orig = pd.read_csv('data/Telco-Customer-Churn.csv')"
+    "df = pd.read_csv('data/Telco-Customer-Churn-clean.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -99,33 +76,31 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>customerID</th>\n",
        "      <th>gender</th>\n",
-       "      <th>SeniorCitizen</th>\n",
-       "      <th>Partner</th>\n",
-       "      <th>Dependents</th>\n",
+       "      <th>senior_citizen</th>\n",
+       "      <th>partner</th>\n",
+       "      <th>dependents</th>\n",
        "      <th>tenure</th>\n",
-       "      <th>PhoneService</th>\n",
-       "      <th>MultipleLines</th>\n",
-       "      <th>InternetService</th>\n",
-       "      <th>OnlineSecurity</th>\n",
-       "      <th>...</th>\n",
-       "      <th>DeviceProtection</th>\n",
-       "      <th>TechSupport</th>\n",
-       "      <th>StreamingTV</th>\n",
-       "      <th>StreamingMovies</th>\n",
-       "      <th>Contract</th>\n",
-       "      <th>PaperlessBilling</th>\n",
-       "      <th>PaymentMethod</th>\n",
-       "      <th>MonthlyCharges</th>\n",
-       "      <th>TotalCharges</th>\n",
-       "      <th>Churn</th>\n",
+       "      <th>phone_service</th>\n",
+       "      <th>multiple_lines</th>\n",
+       "      <th>internet_service</th>\n",
+       "      <th>online_security</th>\n",
+       "      <th>online_backup</th>\n",
+       "      <th>device_protection</th>\n",
+       "      <th>tech_support</th>\n",
+       "      <th>streaming_tv</th>\n",
+       "      <th>streaming_movies</th>\n",
+       "      <th>contract</th>\n",
+       "      <th>paperless_billing</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>monthly_charges</th>\n",
+       "      <th>total_charges</th>\n",
+       "      <th>churn</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7590-VHVEG</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
@@ -135,7 +110,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -149,7 +124,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5575-GNVDE</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -159,7 +133,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -168,12 +142,11 @@
        "      <td>No</td>\n",
        "      <td>Mailed check</td>\n",
        "      <td>56.95</td>\n",
-       "      <td>1889.5</td>\n",
+       "      <td>1889.50</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3668-QPYBK</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -183,7 +156,7 @@
        "      <td>No</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -197,7 +170,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7795-CFOCW</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -207,7 +179,7 @@
        "      <td>No phone service</td>\n",
        "      <td>DSL</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
@@ -221,7 +193,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9237-HQITU</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -231,7 +202,7 @@
        "      <td>No</td>\n",
        "      <td>Fiber optic</td>\n",
        "      <td>No</td>\n",
-       "      <td>...</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -243,231 +214,54 @@
        "      <td>151.65</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7038</th>\n",
-       "      <td>6840-RESVB</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>One year</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Mailed check</td>\n",
-       "      <td>84.80</td>\n",
-       "      <td>1990.5</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7039</th>\n",
-       "      <td>2234-XADUH</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>72</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>No</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>One year</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Credit card (automatic)</td>\n",
-       "      <td>103.20</td>\n",
-       "      <td>7362.9</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7040</th>\n",
-       "      <td>4801-JZAZL</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>11</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No phone service</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Electronic check</td>\n",
-       "      <td>29.60</td>\n",
-       "      <td>346.45</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7041</th>\n",
-       "      <td>8361-LTMKD</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>No</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Mailed check</td>\n",
-       "      <td>74.40</td>\n",
-       "      <td>306.6</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7042</th>\n",
-       "      <td>3186-AJIEK</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>66</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Two year</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Bank transfer (automatic)</td>\n",
-       "      <td>105.65</td>\n",
-       "      <td>6844.5</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7043 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      customerID  gender  SeniorCitizen Partner Dependents  tenure  \\\n",
-       "0     7590-VHVEG  Female              0     Yes         No       1   \n",
-       "1     5575-GNVDE    Male              0      No         No      34   \n",
-       "2     3668-QPYBK    Male              0      No         No       2   \n",
-       "3     7795-CFOCW    Male              0      No         No      45   \n",
-       "4     9237-HQITU  Female              0      No         No       2   \n",
-       "...          ...     ...            ...     ...        ...     ...   \n",
-       "7038  6840-RESVB    Male              0     Yes        Yes      24   \n",
-       "7039  2234-XADUH  Female              0     Yes        Yes      72   \n",
-       "7040  4801-JZAZL  Female              0     Yes        Yes      11   \n",
-       "7041  8361-LTMKD    Male              1     Yes         No       4   \n",
-       "7042  3186-AJIEK    Male              0      No         No      66   \n",
+       "   gender  senior_citizen partner dependents  tenure phone_service  \\\n",
+       "0  Female               0     Yes         No       1            No   \n",
+       "1    Male               0      No         No      34           Yes   \n",
+       "2    Male               0      No         No       2           Yes   \n",
+       "3    Male               0      No         No      45            No   \n",
+       "4  Female               0      No         No       2           Yes   \n",
        "\n",
-       "     PhoneService     MultipleLines InternetService OnlineSecurity  ...  \\\n",
-       "0              No  No phone service             DSL             No  ...   \n",
-       "1             Yes                No             DSL            Yes  ...   \n",
-       "2             Yes                No             DSL            Yes  ...   \n",
-       "3              No  No phone service             DSL            Yes  ...   \n",
-       "4             Yes                No     Fiber optic             No  ...   \n",
-       "...           ...               ...             ...            ...  ...   \n",
-       "7038          Yes               Yes             DSL            Yes  ...   \n",
-       "7039          Yes               Yes     Fiber optic             No  ...   \n",
-       "7040           No  No phone service             DSL            Yes  ...   \n",
-       "7041          Yes               Yes     Fiber optic             No  ...   \n",
-       "7042          Yes                No     Fiber optic            Yes  ...   \n",
+       "     multiple_lines internet_service online_security online_backup  \\\n",
+       "0  No phone service              DSL              No           Yes   \n",
+       "1                No              DSL             Yes            No   \n",
+       "2                No              DSL             Yes           Yes   \n",
+       "3  No phone service              DSL             Yes            No   \n",
+       "4                No      Fiber optic              No            No   \n",
        "\n",
-       "     DeviceProtection TechSupport StreamingTV StreamingMovies        Contract  \\\n",
-       "0                  No          No          No              No  Month-to-month   \n",
-       "1                 Yes          No          No              No        One year   \n",
-       "2                  No          No          No              No  Month-to-month   \n",
-       "3                 Yes         Yes          No              No        One year   \n",
-       "4                  No          No          No              No  Month-to-month   \n",
-       "...               ...         ...         ...             ...             ...   \n",
-       "7038              Yes         Yes         Yes             Yes        One year   \n",
-       "7039              Yes          No         Yes             Yes        One year   \n",
-       "7040               No          No          No              No  Month-to-month   \n",
-       "7041               No          No          No              No  Month-to-month   \n",
-       "7042              Yes         Yes         Yes             Yes        Two year   \n",
+       "  device_protection tech_support streaming_tv streaming_movies  \\\n",
+       "0                No           No           No               No   \n",
+       "1               Yes           No           No               No   \n",
+       "2                No           No           No               No   \n",
+       "3               Yes          Yes           No               No   \n",
+       "4                No           No           No               No   \n",
        "\n",
-       "     PaperlessBilling              PaymentMethod MonthlyCharges  TotalCharges  \\\n",
-       "0                 Yes           Electronic check          29.85         29.85   \n",
-       "1                  No               Mailed check          56.95        1889.5   \n",
-       "2                 Yes               Mailed check          53.85        108.15   \n",
-       "3                  No  Bank transfer (automatic)          42.30       1840.75   \n",
-       "4                 Yes           Electronic check          70.70        151.65   \n",
-       "...               ...                        ...            ...           ...   \n",
-       "7038              Yes               Mailed check          84.80        1990.5   \n",
-       "7039              Yes    Credit card (automatic)         103.20        7362.9   \n",
-       "7040              Yes           Electronic check          29.60        346.45   \n",
-       "7041              Yes               Mailed check          74.40         306.6   \n",
-       "7042              Yes  Bank transfer (automatic)         105.65        6844.5   \n",
+       "         contract paperless_billing             payment_method  \\\n",
+       "0  Month-to-month               Yes           Electronic check   \n",
+       "1        One year                No               Mailed check   \n",
+       "2  Month-to-month               Yes               Mailed check   \n",
+       "3        One year                No  Bank transfer (automatic)   \n",
+       "4  Month-to-month               Yes           Electronic check   \n",
        "\n",
-       "     Churn  \n",
-       "0       No  \n",
-       "1       No  \n",
-       "2      Yes  \n",
-       "3       No  \n",
-       "4      Yes  \n",
-       "...    ...  \n",
-       "7038    No  \n",
-       "7039    No  \n",
-       "7040    No  \n",
-       "7041   Yes  \n",
-       "7042    No  \n",
-       "\n",
-       "[7043 rows x 21 columns]"
+       "   monthly_charges  total_charges churn  \n",
+       "0            29.85          29.85    No  \n",
+       "1            56.95        1889.50    No  \n",
+       "2            53.85         108.15   Yes  \n",
+       "3            42.30        1840.75    No  \n",
+       "4            70.70         151.65   Yes  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_orig"
+    "df.head(5)"
    ]
   },
   {
