refactor: update notebooks

--- a/notebook/exploration_initial.ipynb
+++ b/notebook/exploration_initial.ipynb
@@ -2,6 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "051eb4fa",
+   "metadata": {},
+   "source": [
+    "# Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae7cdb70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "def working_directory():\n",
+    "    \"\"\"fixed the issue\n",
+    "\n",
+    "    Returns:\n",
+    "        str: the location of the ideal directory\n",
+    "    \"\"\"\n",
+    "    return os.getcwd().replace(\"\\\\notebooks\",\"\")\n",
+    "os.chdir(working_directory())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cathedral-router",
    "metadata": {},
    "source": [
@@ -16,9 +42,8 @@
    "outputs": [],
    "source": [
     "# importing libraries \n",
-    "import os \n",
     "import pandas as pd \n",
-    "import numpy as np "
+    "import numpy as np"
    ]
   },
   {
